--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ main {
     bottom: 15px;
     right: 15px;
     display: none;
-    background: rgba(255, 255, 255, 0.6);
+    background: rgba(0, 0, 0, 0.75);
     border-radius: 4px;
     z-index: 999;
     cursor: pointer;
@@ -47,7 +47,6 @@ main {
 
 .container {
     width: 1250px;
-    position: relative;
     right: 0;
     transition: all, 0.25s;
 }
@@ -98,6 +97,14 @@ main {
     box-shadow: none !important;
 }
 
+.btn-danger {
+    border-bottom: 3px solid #a20505 !important;
+}
+
+.btn-danger:active, .btn-danger:focus {
+    box-shadow: none !important;
+}
+
 .img-circle {
     border-radius: 50%;
 }
@@ -107,7 +114,7 @@ main {
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 999;
+    z-index: 998;
     background: #fff;
     box-shadow: 0 0 7px 2px #000000a1;
     transition: all, 0.5s;
@@ -131,7 +138,7 @@ main {
 .anime__search_bar input[type="text"]:focus {
     border: 1px solid #e4e4e4;
     background: #f1f1f1;
-    box-shadow: 0px 2px 4px 0px #00000085;
+    box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.2);
     outline: none !important;
 }
 
@@ -147,17 +154,17 @@ main {
     text-align: left;
 }
 
-.anime__search_bar .container .col-sm-4:first-child img {
-    width: 88px;
+.anime__search_bar.anime__search_bar .navbar__img {
+    width: 140px;
     position: absolute;
-    top: -22px;
-    transition: all, 0.5s;
+    top: -50px;
+    transform: rotate(-10deg);
+    transition: all, 0.25s;
 }
 
-.anime__search_bar.anime__search_bar .container .col-sm-4:first-child img {
-    width: 248px;
-    position: absolute;
-    top: -41px;
+.rotate_off {
+    transform: rotate(0deg) !important;
+    width: 115px !important;
 }
 
 .menu__toggle {
@@ -197,23 +204,20 @@ main {
 
 .sidebar {
     font-family: 'Roboto', sans-serif;
-    position: absolute;
-    right: -500px;
-    top: 50px;
+    position: fixed;
+    right: -325px;
+    top: 0;
     bottom: 0;
     background: #fff;
-    width: 100%;
+    width: 325px;
     opacity: 0;
     transition: all, 0.25s;
-    z-index: 998;
+    z-index: 999;
 }
 
 .sidebar__toggle {
     right: 0;
     opacity: 1;
-    right: -390px;
-    opacity: 1;
-    height: 100vh;
 }
 
 .sidebar > .sidebar__img {
@@ -242,6 +246,7 @@ main {
     transition: all, 0.25s;
     border-radius: 4px;
     text-align: left;
+    font-weight: 500;
 }
 
 .sidebar > ul.sidebar__menu > li.sidebar__item:hover {
@@ -308,7 +313,7 @@ main {
     transition: all, 0.25s;
     height: 200px;
     overflow: hidden;
-    box-shadow: 0px 2px 7px 0 rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 5px 7px 0 rgba(0, 0, 0, 0.5);
     border: none !important;
 }
 
@@ -339,7 +344,7 @@ main {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 24px;
+    font-size: 18px;
     color: #fff;
 }
 
@@ -426,17 +431,27 @@ main {
 
 .anime__content {
     position: relative;
-    height: 150px;
+    min-height: 180px;
+}
+
+.anime__card_target {
+    position: absolute;
+    top: -10px;
+    right: 10px;
+    background: #f73939;
+    padding: 5px 10px;
+    border-radius: 4px;
+    color: #fff;
+    font-weight: 600;
 }
 
 .anime__content_inner {
-    position: absolute;
+    position: relative;
     top: -50px;
     background: #fff;
-    left: 50px;
-    right: 50px;
     border-radius: 4px;
     padding: 0 20px;
+    margin: 0 50px;
     box-shadow: 0px 3px 4px 0 rgba(0, 0, 0, 0.35);
 }
 
@@ -475,9 +490,27 @@ main {
     border-radius: 4px;
 }
 
+.anime__image__wrapper .btn-primary {
+    position: absolute;
+    z-index: 997;
+    top: -20px;
+    right: 5px;
+    opacity: 0;
+    transition: all, 0.25s;
+}
+
+.anime__image__wrapper:hover .btn-primary{
+    opacity: 1;
+    top: 5px;
+}
+
 .anime__resume, .anime__informations {
     margin: 30px 0;
     text-align: justify;
+}
+
+.anime__informations__tag .anime__tag {
+    float: left;
 }
 
 .anime__resume {
@@ -498,6 +531,29 @@ main {
     transform: translateY(-50%);
 }
 
+.anime__overlay_embed {
+    display: none;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: #000000e8;
+    z-index: 999;
+    cursor: pointer;
+}
+
+.visible__overlay {
+    display: block !important;
+}
+
+.anime__overlay_content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 .anime__notes {
     font-weight: 600;
     font-size: 18px;
@@ -510,11 +566,11 @@ main {
 .anime__comment_new, .anime__comment_show {
     background: #f1f1f1;
     padding: 20px;
-    border: 1px solid #ccc;
     border-radius: 4px;
     margin: 10px 0;
     position: relative;
     overflow: hidden;
+    box-shadow: 0px 3px 4px 0 rgba(0, 0, 0, 0.35);
 }
 
 .anime__comment_show__author {
@@ -588,7 +644,7 @@ main {
 }
 
 .overlay {
-    background: rgba(0, 0, 0, 0.75);
+    background: rgba(0, 0, 0, 0.95);
     position: fixed;
     top: 0;
     right: 0;
@@ -598,6 +654,7 @@ main {
     z-index: 0;
     transition: all, 0.25s;
     display: none;
+    z-index: 998;
 }
 
 /* Register & login forms */
@@ -656,7 +713,7 @@ footer {
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 999;
+    z-index: 997;
 }
 
 .footer__title {
@@ -835,16 +892,14 @@ ul.social-network {
 
 /* Badges */
 
-.badge--wrapper {
-    text-align: center;
-}
-
 .badge {
     margin: 10px;
 }
 
 .badge img {
-    border-radius: 25px;
+    border-radius: 50px;
+    width: 75px;
+    height: 75px;
 }
 
 .contact__content {
@@ -960,5 +1015,6 @@ ul.social-network {
 legend.col-form-label.required{
     display: none;
 }
+
 
 
