--- a/templates/animes/anime.index.html.twig
+++ b/templates/animes/anime.index.html.twig
@@ -11,27 +11,28 @@
                                 <img class="card-img-top" src="{{ a.image }}" alt="{{ a.originalTitle }}">
                                 <div class="card_img_overlay">
                                     <div class="card_img_overlay_content">
-                                        <i class="fas fa-hat-wizard"></i> {{ a.target }}
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card_body">
-                                <div class="row">
-                                    <div class="col-sm-6">
-                                        <div class="anime__card_title">
-                                            <h3>{{ a.originalTitle }}</h3>
-                                            <h4><em>{{ a.translatedTitle }}</em></h4>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <span class="anime__card__anime__tag">
+                                        <div class="anime__card__anime__tag">
                                             {% for t in a.tag %}
                                                 <div class="anime__tag" style="background: {{ t.color }}; color: #fff">
                                                     <i class="{{ t.icone }}"></i> {{ t }}
                                                 </div>
                                             {% endfor %}
-
-                                        </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card_body">
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <div class="anime__card_title">
+                                            <h3>{{ a.originalTitle }}</h3>
+                                            <h4><em>{{ a.translatedTitle }}</em></h4>
+                                        </div>
+                                        {% if a.target %}
+                                            <div class="anime__card_target">
+                                                <span>{{ a.target }}</span>
+                                            </div>
+                                        {% endif %}
                                     </div>
                                 </div>
                             </div>
