--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -54,7 +54,7 @@
                     </p>
                 </div>
                 <div class="form_register__options">
-                    <a href="#" class="btn btn-primary"><i class="fab fa-google"></i> M'inscrire avec Google</a>
+                    <a href="#" class="btn btn-primary disabled"><i class="fab fa-google"></i> M'inscrire avec Google</a>
                     <ul>
                         <li><a href="{{ path('app_login') }}">J'ai déjà un compte</a></li>
                         <li><a href="#">J'ai oublié mon mot de passe</a></li>
