--- a/templates/animes/anime.index.html.twig
+++ b/templates/animes/anime.index.html.twig
@@ -4,7 +4,7 @@
     <div class="anime__list">
         <div class="row">
             {% for a in anime %}
-                <div class="col-sm-3">
+                <div class="col-md-5ths">
                     <a href="{{ path('anime.show', { 'id' : a.id }) }}" class="anime__link">
                         <div class="card anime__card">
                             <div class="card_img__wrapper">
