--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,5 +22,6 @@
                     console.error( error );
                 } );
         </script>
+        <script src="https://unpkg.com/infinite-scroll@3/dist/infinite-scroll.pkgd.js"></script>
     </body>
 </html>
