--- a/templates/searchBar.html.twig
+++ b/templates/searchBar.html.twig
@@ -1,3 +1,3 @@
 {{ form_start(form) }}
-<button class="btn btn-success" type="submit">Rechercher</button>
+<button class="btn btn-primary" type="submit">Rechercher</button>
 {{ form_end(form) }}
