--- a/templates/animes/anime.index.html.twig
+++ b/templates/animes/anime.index.html.twig
@@ -1,6 +1,21 @@
 {% extends 'front.base.html.twig' %}
 
 {% block content %}
+    <div class="anime__trends__container">
+        <div class="anime__trends__wrapper">
+            <div class="anime__trends__list">
+                <div class="anime__trends">
+                    <img src="https://via.placeholder.com/450x200">
+                </div>
+                <div class="anime__trends">
+                    <img src="https://via.placeholder.com/450x200">
+                </div>
+                <div class="anime__trends">
+                    <img src="https://via.placeholder.com/450x200">
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="anime__list">
         <div class="row">
             {% for a in anime %}
